--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </nav>
     <main class="bg_custom">
         <section class="container gap-3" >
-            <div class="row justify-content-lg-start" id="tasks-container">
+            <div class="row" id="tasks-container">
                 <div class="spinner-border text-warning" style="width: 4rem; height: 4rem;" id="spinner" role="status">
                     <span class="visually-hidden">Loading...</span>
                 </div>
@@ -71,11 +71,7 @@
         </div>
     </div>
 
-
-    <script src="./js/modals.js"></script>
-    <script src="./js/taskOperations.js"></script>
-    <script src="./js/colors.js"></script>
-    <script src="./js/domRender.js"></script>
+    <script type="module" src="./js/domRender.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
