--- a/index.html
+++ b/index.html
@@ -27,14 +27,9 @@
                             </button>
                         </li>
                         <li class="nav-item">
-                            <button class="nav-link text-white" type="button" data-action="update" data-bs-toggle="modal" data-bs-target="#form-modal">
-                                Change task status
-                            </button>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">
+                            <button class="nav-link text-white" type="button" data-action="settings" data-bs-toggle="modal" data-bs-target="#config-modal">
                                 Settings
-                            </a>
+                            </button>
                         </li>
                     </ul>
                 </div>
@@ -71,7 +66,24 @@
         </div>
     </div>
 
-    <script type="module" src="./js/domRender.js"></script>
+    <div class="modal fade" id="config-modal" tabindex="-1" aria-labelledby="config-modal-label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content bg_dark_blue text-white">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="config-modal-label">Speech Synthesis Configuration</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save Settings</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script type="module" src="./js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
